# fastapi_cloudrun_pubsub

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  docker-compose.gcp-default-credentials.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
compose/: Dockerfile  start_api  start_api_dev  start_worker  start_worker_dev
docs/: giagram_gcp.py
docs/presentation/: PRESENTATION.html  PRESENTATION.md  generate_presentation.sh
docs/presentation/diagrams/: diag_1.py  diag_2.py  diag_3.py  diag_4.py
docs/presentation/static/: qrcode_gen.py
scripts/setup_pubsub_emulator/: README.md  config.py  pubsub.py  setup.py
src/: api.py  app_api.py  app_worker.py  config.py  worker.py
src/api/: app.py  exceptions.py  handlers.py  health.py
src/enums/: image.py
src/schemas/: image.py  pubsub.py
src/services/: database_service.py  image_service.py  queue_service.py  storage_service.py
src/utils/: helpers.py  logging.py
terraform/envs/example/: .terraform.lock.hcl  artifact_registry.tf  cloud_run.tf  datastore.tf  github_actions_oidc.tf  iam.tf  main.tf  network.tf  outputs.tf  pubsub.tf  storage.tf  terraform.tfvars.example  variables.tf
terraform/modules/github_actions_oidc/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  factories.py  fixtures.py
tests/api/: test_api.py  test_health.py  test_worker.py
tests/enums/: test_enums.py
tests/services/: test_database_service.py  test_queue_service.py  test_storage_service.py
tests/utils/: test_helpers.py
